testcases/error/ambiguous_elsif.veryl
module ambiguous_elsif {
    #[elsif(A)]
    let _a: logic = 0;
}
